--- a/pages/contact.htm
+++ b/pages/contact.htm
@@ -24,6 +24,7 @@ function onStart(){
             <div class="row contact_info">
                 <div class="coordinator_image">
                     <img src="{{profile.avatar.thumb(298, 312, {'mode' : 'crop' })}}">
+                    <div class="uni_label"></div>
                 </div>
                 <div class="coordinator_info">
                     <div>
