--- a/pages/documents-search.htm
+++ b/pages/documents-search.htm
@@ -18,7 +18,7 @@ use Pensoft\Internaldocuments\Models\Subfolders;
 use System\Models\File;
 
 function onStart(){
-	$term = Request::get('q');
+	$term = Request::get('q') ?: Request::get('query');
 	if($term){
 		$foldersData = Subfolders::where('name','iLIKE','%'.$term.'%')->get();
 		$this['foldersData'] = $foldersData;
@@ -42,7 +42,7 @@ public function onDownloadHandler(){
 }
 ?>
 ==
-<div class="container">
+
 	<div class="row middle-xs between-xs">
 			{% partial 'components/search-documents-search-form' %}
 
@@ -66,4 +66,3 @@ public function onDownloadHandler(){
 				{% endif %}
 		</div>
 	</div>
-</div>
