--- a/pages/focal-regions.htm
+++ b/pages/focal-regions.htm
@@ -10,6 +10,13 @@ title = 1
 background = "transperant"
 templates = "template3"
 description_limit = 0
+
+[jumbotron regional]
+jumbotron = "regional-attributes"
+title = 1
+background = "transperant"
+templates = "template3"
+description_limit = 0
 ==
 <?php
 use Pensoft\Accordions\Models\Item;
@@ -48,3 +55,146 @@ use Pensoft\Accordions\Models\Item;
         </div>
 
     </div>
+
+<div class="container-fluid bg-secondary">
+    <div class="container">
+        <div class="row middle-xs between-md around-xs">
+            <div class="col-md-6 col-xs-12 attr_text">{% component 'regional' %}</div>
+            <div class="col-md-5 col-xs-12 end-md center-xs  attr_table">
+
+                <table class="regions_info">
+                    <tr>
+                        <th>Focal Region</th>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>4</th>
+                        <th>5</th>
+                        <th>6</th>
+                        <th>7</th>
+                    </tr>
+                    <tr>
+                        <td>Rare/threatened</td>
+                        <td><img src="{{'x.svg'|media}}"> </td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                    <tr>
+                        <td>Beekeeping</td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                    <tr>
+                        <td>Othe pollinators</td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Natura2000</td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Intensive farming</td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                    <tr>
+                        <td>Smallholders</td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Urban areas</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Fruit crops</td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Energy crops</td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                    <tr>
+                        <td>Medicinal crops</td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Fodder crops</td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                    <tr>
+                        <td>Living Lab</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                        <td><img src="{{'x.svg'|media}}"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
