--- a/pages/internal-documents.htm
+++ b/pages/internal-documents.htm
@@ -1,4 +1,4 @@
-url = "/internal-repository/:slug?|[a-zA-Z\-0-9]/:parent_id?|[0-9]"
+url = "/internal-repository/:slug?administrative-documents|[a-zA-Z\-0-9]/:parent_id?|[0-9]"
 layout = "default"
 title = "Internal repository"
 is_hidden = 0
@@ -15,11 +15,11 @@ redirect = "home"
 [internalrepository]
 ==
 <?php
-use Pensoft\Internaldocuments\Models\Subfolders;
+use Pensoft\Icp\Models\Subfolders;
 use System\Models\File;
 
 function onStart(){
-$this['slug'] = $this->param('slug');
+$this['slug'] = $this->param('slug') ?: 'administrative-documents';
 if(get('download')){
 $file = File::find((int)get('download'));
 $file_name = $file->getLocalPath();
@@ -50,6 +50,5 @@ return Redirect::back();
 ?>
 ==
 {% component 'session' %}
-
 {% component 'internalrepository' slug=slug %}
 
