--- a/pages/newsletters.htm
+++ b/pages/newsletters.htm
@@ -81,13 +81,14 @@ return Response::download($pathToFile, $fileName, $headers);
                     <div class="logo-container {{record.name|slug}} {{record.name}}">
                         <img src="{{record.newsletter_image.path}}" title="{{record.name}}" alt="{{record.name}}">
                     </div>
+                    <div class="date">{{record.date|date("j M Y")}}</div>
                     <div class="record_name">{{record.name}}</div>
                     <div class="links">
                         {% if record.file %}
                         <a href="{{record.file.path}}" target="_blank" data-attach-loading class="btn btn-primary"><i></i> Download</a>
                         {% endif %}
                         {% if record.url %}
-                        <a class="btn btn-primary" href="{{record.url}}" target="_blank">Read</a>
+                        <a class="btn btn-primary" href="{{record.url}}" target="_blank">Read the newsletter</a>
                         {% endif %}
                     </div>
                 </div>
