--- a/pages/partners.htm
+++ b/pages/partners.htm
@@ -1,6 +1,6 @@
-url = "/partners"
+url = "/consortium"
 layout = "default"
-title = "Partners"
+title = "Consortium"
 is_hidden = 0
 robot_index = "index"
 robot_follow = "follow"
@@ -11,10 +11,11 @@ use Pensoft\Partners\Models\Partners;
 
 function onStart(){
 	$this['partners'] =  Partners::where('type', 1)->get();
+	$this['a_partners'] =  Partners::where('type', 2)->get();
 }
 ?>
 ==
-    <div class="container">
+<div class="container">
         <div class="row container">
             <div class="row partners_list">
                 {% for k, partner in partners %}
@@ -38,6 +39,38 @@ function onStart(){
                         </div>
                 {% endfor %}
             </div>
+
+
+
         </div>
+
+    <div class="row container">
+
+        <h1>Associated partners</h1>
+
+        <div class="row partners_list">
+
+            {% for k, partner in a_partners %}
+            <div class="partner-item key_22{{k}}" data-aos="fade-up">
+                <div class="row middle-xs logo_and_link">
+                    <div class="col-xs-12 col-md-4 partner_logo">
+                        <a href="{{partner.instituion_url}}" target="_blank">
+                            <img alt="{{ partner.instituion }}" src="{{partner.cover.thumb(150,auto,{'mode':'crop'})}}">
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-md-8 partner_title">
+                        <h4>{{partner.instituion}} <a href="{{partner.instituion_url}}" target="_blank">({{partner.email}})</a></h4>
+                    </div>
+                </div>
+                <div class="col-xs-12 partner_description">
+                    <div class="partner_content toogle-contact-paragraphs" style="display: none;">
+                        {{partner.content|raw}}
+                    </div>
+                    <a class="read-more-expand dorsal">Read more</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
 
     </div>
