--- a/pages/dissemination-report-forms.htm
+++ b/pages/dissemination-report-forms.htm
@@ -9,62 +9,42 @@ allowedUserGroups[] = "registered"
 allowedUserGroups[] = "guest"
 redirect = "home"
 ==
+<?php
+use Pensoft\Icp\Models\Subfolders;
+use System\Models\File;
+
+function onStart(){
+
+    $this['folders'] = Subfolders::where('pensoft_icp_subfolders.parent_id', null)->get();
+
+}
+?>
+==
 {% component 'session' %}
-<div class="container">
 
-	<div class="row middle-xs between-xs">
-		<div class="col-xs-12 col-md-5 mt-1 mb-1">
+    <div class="row middle-xs between-xs internal-documents">
 
-		</div>
+        <div class="col-xs-12">
 
-		<div class="col-xs-12 col-md-3 end-xs">
-			<a href="{{url('internal-repository')}}" class="back"> <div class="arrow-left end-xs"></div> &nbsp;Back to documents</a>
-		</div>
+            <div class="row icp_main_page">
+                {% partial 'components/icp_folders_list' folders=folders %}
+                <div class="col-md-10 col-xs-12 folders_container">
 
-		<div class="col-xs-12 col-md-12 end-xs">
-			<h1 class="base_heading inner-page">Reporting forms</h1>
-		</div>
+                    <div class="row middle-xs between-xs mb-4">
+                        <div class="col-md-6 start-md col-xs-12 center-xs">{% partial 'components/search-documents-search-form' %}</div>
+                    </div>
 
 
-		<div class="col-xs-12 work_packages">
-
-			<div class="accordion-border">
-				<div class="row middle-xs accordion-toggle">
-
-					<div class="col-xs start-xs">
-						<a href="https://docs.google.com/forms/d/e/1FAIpQLSeDL0TyjGRvedBZa32nFNhyMh0fuT7mmOmIqusyTT7pdvkBmw/viewform" target="_blank">VALOR Communication Activities Form</a></div>
-
-				</div>
-			</div>
-
-			<div class="accordion-border">
-				<div class="row middle-xs accordion-toggle">
-
-					<div class="col-xs start-xs"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeYPYWdLY1uwrH_SYxjIW6FrwjMGPkNt0X3z11MrNca9re1_w/viewform" target="_blank">VALOR Dissemination Activities Form</a></div>
-
-				</div>
-			</div>
-			<div class="accordion-border">
-				<div class="row middle-xs accordion-toggle">
-
-					<div class="col-xs start-xs"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ7gzPNC35Gm85-TMk7SQTiQcktG7Q00JnByk_dSrt1ljrAA/viewform" target="_blank">VALOR Publications Form</a></div>
-
-				</div>
-			</div>
-
-			<div class="accordion-border">
-				<div class="row middle-xs accordion-toggle">
-
-					<div class="col-xs start-xs"><a href="https://docs.google.com/forms/d/e/1FAIpQLSc0eod3ExZJjoFpq-DaRJLn4jF39y7bBO2DmReDWt47NTAf0w/viewform" target="_blank">VALOR Datasets Form</a></div>
-
-				</div>
-			</div>
+                    <ul class="reporting_forms_list">
+                        <li><a href="" target="_blank">VALOR Communication Activities Form</a></li>
+                        <li><a href="" target="_blank">VALOR Dissemination Activities Form</a></li>
+                        <li><a href="" target="_blank">VALOR Publications Form</a></li>
+                        <li><a href="" target="_blank">VALOR Datasets Form</a></li>
+                    </ul>
 
 
+                </div>
 
-		</div>
-
-
-	</div>
-
-</div>
+            </div>
+        </div>
+    </div>
