--- a/pages/about.htm
+++ b/pages/about.htm
@@ -68,7 +68,16 @@ description_limit = 0
 
         <div class="row middle-xs between-md around-xs mb-4">
             <div class="col-md-6 col-xs-12 testimonial animate_text"  data-aos="fade-up" data-aos-offset="50">
-                {% component 'testimonial' %}
+                <div class="container">
+                    <h3>VALOR is more than just great research. It’s about working with people to make that research understandable and meaningful to everyone, and give them the tools to explore their relationship with nature themselves.</h3>
+
+                    <p><img src="{{'tom.svg'|media}}" class="fr-fic fr-dib" data-result="success"></p>
+
+
+                </div>
+
+
+
             </div>
             <div class="col-md-5 col-xs-12">
                 <img src="{{'About-Img3.png'|media}}" data-aos="fade-up" data-aos-offset="100" data-aos-duration="100">
