--- a/pages/home.htm
+++ b/pages/home.htm
@@ -70,9 +70,11 @@ function onStart(){
 <!-- latest from news -->
 <div class="container highlights-news">
     <div class="row">
-        <div class="col-md-4 col-xs-12 start-md center-xs view_all_container">
-        <h1 class="display-1">Latest news from<br>VALOR</h1>
-            <a class="btn btn-primary view_all" href="{{'news'|page}}">View all</a>
+        <div class="col-md-4 col-xs-12 start-md center-xs">
+            <div class="view_all_container">
+                <h1 class="display-1">Latest news from<br>VALOR</h1>
+                <a class="btn btn-primary view_all" href="{{'news'|page}}">View all</a>
+            </div>
         </div>
         <div class="col-md-8 col-xs-12">
             {% for highlight in highlights %}
