--- a/pages/images.htm
+++ b/pages/images.htm
@@ -88,30 +88,37 @@ return Response::download($pathToFile, $fileName, $headers);
 
             {% if gallery.images %}
             <div class="row">
-                {% for image in gallery.images %}
+                {% for k, image in gallery.images %}
                 <div class="col-md-4 col-xs-12 home-news-records">
                     <div class="row news-item">
                         <div class="col-md-12 col-xs-12 home-news-cover">
-
-                            <a data-toggle="modal" href="#image{{image.id}}">
+                            <a onclick="openModal(); currentSlide({{ k + 1 }})">
                                 <img src="{{ image.path}}" alt="{{ image.name }}">
                                 <div class="btn zoom-btn btn-primary"><img src="{{'zoom.svg'|media}}" class="zoom_icon"></div>
                                 <div class="blur_filter"></div>
                             </a>
-
-                            <div class="control-popup modal fade" id="#image{{image.id}}" tabindex="-1" role="dialog">
-                                <div class="modal-dialog">
-                                    <div class="modal-content center-xs">
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                        <img src="{{ image.path}}" alt="{{ image.name }}">
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
                 {% endfor %}
+
+
+                <div class="control-popup modal fade" id="imagesModal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <button type="button" class="close" onclick="closeModal()">&times;</button>
+                            {% for k, image in gallery.images %}
+                            <div class="slides">
+                                <img src="{{ image.path}}" alt="{{ image.name }}">
+                            </div>
+                            {% endfor %}
+                            <!-- Next/previous controls -->
+                            <a class="prev" onclick="plusSlides(-1)"></a>
+                            <a class="next" onclick="plusSlides(1)"></a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             {% endif %}
         </div>
