--- a/pages/dissemination-report-forms.htm
+++ b/pages/dissemination-report-forms.htm
@@ -36,10 +36,10 @@ function onStart(){
 
 
                     <ul class="reporting_forms_list">
-                        <li><a href="" target="_blank">VALOR Communication Activities Form</a></li>
-                        <li><a href="" target="_blank">VALOR Dissemination Activities Form</a></li>
-                        <li><a href="" target="_blank">VALOR Publications Form</a></li>
-                        <li><a href="" target="_blank">VALOR Datasets Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeBxuvfLio1F_xd2QdGTBsSrk4bFd5U6KShdiu3XUxSWhQ_LQ/viewform" target="_blank">VALOR Communication Activities Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSckG4jENfVlW2l0rwCcJDLHEQA5x207iGCw-RQsM0AgNngiPg/viewform" target="_blank">VALOR Dissemination Activities Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdP-cnRlMz0ZXcRVM2kZybKh15i564MFFOwAIMqPS89ansMhg/viewform" target="_blank">VALOR Publications Form</a></li>
+                        <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScpFpHcN4HBnRzEg0QIRQEoJTMAohXu4Sq2oD1gkLinWvEhsQ/viewform" target="_blank">VALOR Datasets Form</a></li>
                     </ul>
 
 
