--- a/pages/library.htm
+++ b/pages/library.htm
@@ -9,10 +9,13 @@ robot_follow = "follow"
 templates = "template7"
 has_search = 1
 add_file_name = 1
-no_records_message = "No files available"
+no_records_message = ""
 redirect_to_download_page = 1
 milestones_filter = 1
 ==
 <div class="container mb-2">
     {% component 'LibraryPage' %}
+    <div class="commig_soon">
+        Coming soon...
+    </div>
 </div>
