--- a/pages/media-center.htm
+++ b/pages/media-center.htm
@@ -1,6 +1,6 @@
 url = "/media-center"
 layout = "default"
-title = "Media center"
+title = "Media centre"
 is_hidden = 0
 robot_index = "index"
 robot_follow = "follow"
