--- a/pages/newsletters.htm
+++ b/pages/newsletters.htm
@@ -96,5 +96,9 @@ return Response::download($pathToFile, $fileName, $headers);
             {% endspaceless %}
             {% endfor %}
         </div>
+        {% else %}
+        <div class="commig_soon">
+            Coming soon...
+        </div>
         {% endif %}
 </div>
