media center changes

--- a/pages/media-center.htm
+++ b/pages/media-center.htm
@@ -55,7 +55,7 @@ return Response::download($pathToFile, $fileName, $headers);
             <div class="row media-item">
                 <div class="col-md-12 col-xs-12 mb-2 media-cover">
                     <a href="{{'logo'|page}}">
-                        <img src="{{'Brand-Kit.png'|media}}" title="Brand Kit">
+                        <img src="{{'1.png'|media}}" title="Brand Kit">
                         <div class="btn read-more-btn btn-primary">Open</div>
                         <div class="blur_filter"></div>
                         <div class="media-title">Brand Kit</div>
@@ -87,7 +87,7 @@ return Response::download($pathToFile, $fileName, $headers);
             <div class="row media-item">
                 <div class="col-md-12 col-xs-12 mb-2 media-cover">
                     <a href="/media-center/project-materials">
-                        <img src="{{'Brand-Kit.png'|media}}" title="Project materials">
+                        <img src="{{'2.png'|media}}" title="Project materials">
                         <div class="btn read-more-btn btn-primary">Open</div>
                         <div class="blur_filter"></div>
                         <div class="media-title">Project materials</div>
@@ -134,7 +134,7 @@ return Response::download($pathToFile, $fileName, $headers);
             <div class="row media-item">
                 <div class="col-md-12 col-xs-12 mb-2 media-cover">
                     <a href="{{'images'|page}}">
-                        <img src="{{'Brand-Kit.png'|media}}" title="Images">
+                        <img src="{{'3.png'|media}}" title="Images">
                         <div class="btn read-more-btn btn-primary">Open</div>
                         <div class="blur_filter"></div>
                         <div class="media-title">Images</div>
