matomo and home tooltip

--- a/pages/home.htm
+++ b/pages/home.htm
@@ -46,7 +46,8 @@ function onStart(){
                 Your browser does not support the video tag.
             </video>
             <div class="content" data-aos="fade-left">
-                Pollinators contribute to the reproduction of about 75% of the world's leading food crops*
+                Pollinators contribute to the reproduction of about 75% of the world's leading food crops
+                <a class="tooltiplink" href="https://doi.org/10.1098/rspb.2006.3721" target="_blank" data-title="*Klein et al. 2007">*</a>
             </div>
         </div>
 
@@ -58,7 +59,8 @@ function onStart(){
             <div class="content" data-aos="fade-right">
                 However,
                 <span class="1_in_3">1 in 3</span>
-                bee, butterfly and hoverfly species is in decline*
+                bee, butterfly and hoverfly species is in decline
+                <a class="tooltiplink" href="https://www.iucnredlist.org/" target="_blank" data-title="*IUCN Red List">*</a>
             </div>
         </div>
     </div>
