--- a/pages/about.htm
+++ b/pages/about.htm
@@ -1,6 +1,6 @@
 url = "/about"
 layout = "default"
-title = "WHO WE ARE"
+title = "About VALOR"
 is_hidden = 0
 meta_description = "about page"
 seo_keywords = "keywords"
