--- a/pages/home.htm
+++ b/pages/home.htm
@@ -2,11 +2,11 @@ url = "/"
 layout = "default"
 title = "VALOR"
 is_hidden = 0
-meta_description = "homepage desc"
+meta_title = "VALOR project"
+meta_description = "Welcome to VALOR"
 seo_keywords = "keywords"
 robot_index = "index"
 robot_follow = "follow"
-
 
 [jumbotron intro]
 jumbotron = "vision-behind-everything"
@@ -104,6 +104,3 @@ function onStart(){
     </div>
 </div>
 {% endif %}
-
-
-
